--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <button class="bg-cyan-600 enabled:hover:bg-cyan-700 disabled:bg-cyan-800 border-cyan-600 focus:outline-cyan-600 px-4 py-2 text-sm font-medium text-white focus:outline-none focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 transition ease-in duration-200 rounded-md shadow-md transform enabled:hover:-translate-y-1 active:translate-y-0 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-1">Nous découvrir</button>
         </div>
       </div>
-      <img class="hidden lg:block astro-BBE6DXRZ" src="/Field.png" alt="" decoding="async">
+      <img class="hidden lg:block astro-BBE6DXRZ" src="/dist/Field.png" alt="" decoding="async">
     </div>
   </div>
 </section>
