--- a/store/index.html
+++ b/store/index.html
@@ -179,7 +179,7 @@
 </div>
       <div class="w-full sm:w-auto rounded-lg min-h-[12rem] h-full">
   <div class="bg-neutral-100 border border-neutral-700 rounded-lg shadow-2xl p-6 flex flex-col gap-4 min-h-max">
-    <h3 class="text-xl font-bold">Capteur Temperature</h3>
+    <h3 class="text-xl font-bold">Capteur Température</h3>
     <p>
       
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam velit
