--- a/store/index.html
+++ b/store/index.html
@@ -14,10 +14,10 @@
       </a>
       <ul class="flex text-xl gap-8 text-gray-800 py-4">
         <li>
-          <a class="hover:text-gray-900 hover:underline" href="store">Store</a>
+          <a class="hover:text-gray-900 hover:underline" href="/dist/store">Store</a>
         </li>
         <li>
-          <a class="hover:text-gray-900 hover:underline" href="cloud">Cloud services</a>
+          <a class="hover:text-gray-900 hover:underline" href="/dist/cloud">Cloud services</a>
         </li>
       </ul>
     </nav>
